<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="jp.sabakaido.iconfont.MainActivity">

    <TextView
        android:layout_margin="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/icomoon"
        android:textSize="36sp"
        android:textColor="@color/colorAccent"
        android:text="@string/icon_fav" />

    <TextView
        android:layout_margin="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/icomoon"
        android:textSize="36sp"
        android:textColor="@color/colorPrimary"
        android:text="@string/icon_info" />

    <TextView
        android:layout_margin="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/icomoon"
        android:textSize="36sp"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/icon_clock" />

    <TextView
        android:layout_margin="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/icomoon"
        android:textSize="36sp"
        android:text="@string/icon_home" />

    <TextView
        android:layout_margin="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/icomoon"
        android:textSize="36sp"
        android:text="@string/icon_pencil" />

    <TextView
        android:layout_margin="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/icomoon"
        android:textSize="36sp"
        android:text="@string/icon_yen" />

</LinearLayout>
